# contialign

./: .gitignore  README.md
benchmark/: Cargo.toml
benchmark/output/kallisto/: run_info.json
benchmark/src/: align.rs  cliparameters.rs  main.rs
single/: Cargo.toml
single/src/: align.rs  em.rs  indexscan.rs  kmerhash.rs  parsefa.rs
single/test/: countcompare.ipynb  qpcr.ipynb
synthetic/: create_synthetic.ipynb
tempest/: Cargo.toml  log.txt  log_kallisto.txt
tempest/output/kallisto/: run_info.json
tempest/src/: align.rs  cliparameters.rs  em.rs  indexscan.rs  main.rs  parsefa.rs  serializer.rs
tempest/test/: compare.r  synthetic_test.ipynb
varconti/: Cargo.toml
varconti/output/: counts.tsv  star.tsv
varconti/output/kallisto/: abundance.h5  run_info.json
varconti/src/: align.rs  em.rs  indexscan.rs  main.rs  parsefa.rs  serializer.rs  splitter.rs
varconti/test/: kallisto_test.ipynb  transcript_compare.ipynb
