[package]
name = "benchmark"
version = "0.0.1"
authors = ["Alexander Lachmann <32603869+lachmann12@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
murmur3 = "0.5.2"
clap = "2.33.3"
pbr = "1.1.1"
nohash-hasher = "0.2.0"
fxhash = "0.2.1"
seahash = "4.1.0"
cityhash = "0.1.1"
t1ha = "0.1.0"
rustc-hash = "1.1.0"

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3", "const_xxh3"]
