[package]
name = "tempest"
version = "0.1.0"
authors = ["Alexander Lachmann <32603869+lachmann12@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = "2.33.3"
wavelet-matrix = "0.4.7"
rand = "0.8"
frank = "0.1.3"
threadpool = "1.8.1"
crossbeam="0.8.0"
pbr="1.0.4"
serde_json = "1.0"
rustc-serialize = "*"
bincode = "*"
flate2 = "*"
fnv = "1.0.0"
chrono = "0.4.0"
indicatif = "0.17.0-rc.1"
fxhash = "0.2.1"
blake3 = "1.3.0"
rkyv = {version = "0.7.36", features = ["alloc", "size_64", "copy_unsafe", "std"], default-features = false}
colored = "2"
spinners = "2.0.0"
strum = "0.23.0"
terminal-spinners = "0.3.2"
libc = "0.2.119"
bitvec = "1.0.0"
nohash-hasher = "0.2.0"
cityhash = "0.1.1"
rustc-hash = "1.1.0"
rayon = "1.5.0"